--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p id="error-message" style="color: red;" class="hidden">خطأ في بيانات الدخول. حاول مرة أخرى.</p>
     </div>
     <div id="image-container" class="hidden">
-        <h2>الصورة الخاصة بك</h2>
+        <h2>2024 Grades</h2>
         <img src="photo_2024-07-07_02-46-38.jpg" alt="Your Image" >
     </div>
     <script>
